kubernetes/Instalando ingress controller/test-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portal-dev
  labels:
    name: portal-dev
---
apiVersion: v1
kind: Service
metadata:
  name: site1
  namespace: portal-dev
  labels:
    name: site1
spec:
  type: ClusterIP
  #type: LoadBalancer
  #type: NodePort
  selector:
    name: site1
  ports:
    - name: site1
      port: 8081
      targetPort: 80
      #nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: site2
  namespace: portal-dev
  labels:
    name: site2
spec:
  type: ClusterIP
  #type: LoadBalancer
  #type: NodePort
  selector:
    name: site2
  ports:
    - name: site2
      port: 8082
      targetPort: 80
      #nodePort: 30002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: site1.dyego.cloud
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: site1
              port: 
                number: 8081
  - host: site2.dyego.cloud
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: site2
              port: 
                number: 8082

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site1
  namespace: portal-dev
  labels:
    name: site1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: site1
  template:
    metadata:
      labels:
        name: site1
    spec:
      containers:
        - name: site1
          image: 986039062/valida:site1
          ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site2
  namespace: portal-dev
  labels:
    name: site2
spec:
  replicas: 3
  selector:
    matchLabels:
      name: site2
  template:
    metadata:
      labels:
        name: site2
    spec:
      containers:
        - name: site2
          image: 986039062/valida:site2
          ports:
          - containerPort: 80
